--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "REST API for WineStore",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "node index.js"
+      },
   "keywords": [],
   "author": "Koteterov",
   "license": "ISC",
